# sigmapython

./: .gitignore  README.md  Untitled.ipynb  basinhop_TEMPLATE.xlsx  basinhopfit.py  dist_fits.py  distfits.py  first_file.xlsx  frame_pdsfit.py  global-minimization-fitting.ipynb  linreg.py  make_histograms.py  makefit.py  minfit.py  minfit_eqn.py  minfit_template.xlsx  minimization-fitting.ipynb  pdfunc.ipynb  pdsfit.py  pdsfit_excel.ipynb  pdsfit_intro.ipynb  pdsfit_more.py  pdsfit_old.py  pdsfit_tutorial.ipynb  pdsfitshow.ipynb  pyproject.toml  test.xlsx  test_module.py
discontinued/: makefit.py  pdsmake.py
jupyter-notebooks/: minimization-fitting.ipynb  pdfunc.ipynb
sigmapython/: __init__.py  main.py  spss_convert.py
sigmapython/equation/: basinhopfit.py  minfit.py  minfit_eqn.py
sigmapython/equation/discontinued/: linreg.py
sigmapython/histogram/: __init__.py  frame_pdsfit.py
sigmapython/histogram/discontinued/: pdsfit_more.py
templates/: basinhop_TEMPLATE.xlsx  second_file.xlsx
templates-examples/: minfit_template.xlsx
templates-examples/pdsfit/dataset/example1/: Results.xls
templates-examples/pdsfit/dataset/example2/: Results.xls
templates-examples/pdsfit/dataset/example3/: Results.xls
templates-examples/pdsfit/dataset/example4/: Results.xls
templates-examples/pdsfit/dataset/example5/: Results.xls
templates/pdsfit/: example4.xls
