[tool.poetry]
name = "sigmapython"
version = "0.1.0"
description = "Refactoring statistics code from the graveyard (2020)." 
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
