[tool.poetry]
name = "sigmapython"
version = "0.1.0"
description = "Refactoring statistics code from the graveyard (2020)." 
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
